--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+AIL_DRIVER=smtp
+MAIL_HOST=smtp.naiveuu.cn
+MAIL_PORT=25
+MAIL_USERNAME=laravel-wm@naiveuu.cn
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=laravel-wm@naiveuu.cn
+MAIL_FROM_NAME=Laravel-WM
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -34,7 +36,7 @@ PUSHER_APP_SECRET=
 
 # dingo config
 API_STANDARDS_TREE=prs
-API_SUBTYPE=larabbs
+API_SUBTYPE=hagy
 API_PREFIX=api
 API_VERSION=v1
 API_DEBUG=true
