--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "overtrue/laravel-lang": "~3.0",
         "overtrue/pinyin": "~3.0",
         "predis/predis": "~1.0",
+        "renatomarinho/laravel-page-speed": "^1.8",
         "socialiteproviders/weixin": "^4.0",
         "spatie/laravel-permission": "~2.7",
         "summerblue/administrator": "~1.1",
